# thermogram

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  api.py  app.py  main.py  prompt.md  pyproject.toml  rewrite_story.md  todo.md
.claude/: settings.json
api/: main.py
docs/: README.md  TODO.md  api_contract.md  app_proposal.md  draw_modules.py  identifiability_bibliography.md  implementation.md  links.md  modeling_pipeline.md  modular_rc_proposal.md  physics_model.md  project_description.md  project_design.md  roadmap.md  test_cases.md  todo.md  todo_1.md  todo_2.md  todo_modular_rc.md  toward_v2.md
frontend/: app.js  index.html  package-lock.json  package.json  vite.config.js
frontend_svelte/: vite.config.js
inertie_nocturne/: .gitignore  Cooling down a room.md  inertie_nocturne_mvp.html  proposal.md
notebooks/: case_rooms.py  step0_validation.py
schema/: house_model.schema.json  material.schema.json  model.schema.json
scripts/: screenshot.js
solver/: assemble.py  fit.py  physics.py
tests/: regen_snapshots.py  test_api.py  test_assembler.py  test_d1_shapes.py  test_d2_grouping.py  test_draw.py  test_examples.py  test_golden_priors.py  test_influx_binding.py  test_modules_unit.py  test_persistence.py  test_simulate_sanity.py  test_step0.py  test_step1.py  test_step4a_engine.py
thermal/: api_models.py  assembler.py  channels.py  draw.py  fit.py  irradiance.py  iso6946.py  materials_db.py  models.py  modules.py  priors.py  rc_simulation.py  simulate.py  solar.py  state_space.py  study.py  study_store.py  weather.py
ui/: .gitignore  (+5 more)
(+133 files in other folders)
