[project]
name = "thnodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xdze2", email = "xdze2.me@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "influxdb>=5.3.2",
    "pandas>=3.0.3",
    "python-multipart>=0.0.9",
    "schemdraw>=0.23",
    "uvicorn>=0.30",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
]
